feat: Java 21 performance optimizations and GCP cost automation
Major Changes:
- Java 21 features: Stream.toList(), lock-free concurrency, sequenced collections
- JPA N+1 query optimization with JOIN FETCH (7 queries optimized)
- HikariCP pool optimization: 30→10 max connections, 10→2 min-idle
- Database indexes migration V119 (6 performance indexes)
- Location endpoint rate limiting (max 5000 results)
- @Transactional(readOnly) on read-only queries
- Logging level optimization: DEBUG→INFO
- Exception handling improvements (specific types for monitoring)
- StringOptimizer utility for production string operations
- ParallelExecutionService timeout support

GCP Cost Fixes:
- Created fix-gcp-costs.sh script to delete failed deployments
- On-demand preprod deployment workflow (prevents retry-loop costs)
- Automatic cleanup workflow for preprod
- Cost analysis documentation

Performance Impact:
- Reduced memory usage: ~40-80 MB (HikariCP pool
Major Changes:
- Java 21 features: Stream.toList(), lock-free concurrency, sequenced collections
- JPA N+1 query optid queries
- - Java 21 fea m- JPA N+1 query optimization with JOIN FETCH (7 queries optimized)
- HikariCP po? - HikariCP pool optimization: 30→10 max connections, 10→2 minef- Database indexes migration V119 (6 performance ind